[metadata]
name = osc-snowpenstack
summary = Reference OpenStackClient plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    osc_snowpenstack

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[compile_catalog]
directory = osc_snowpenstack/locale
domain = osc-snowpenstack

[update_catalog]
domain = osc-snowpenstack
output_dir = osc_snowpenstack/locale
input_file = osc_snowpenstack/locale/osc-snowpenstack.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = osc_snowpenstack/locale/osc-snowpenstack.pot

[entry_points]
openstack.cli.extension =
    osc_snowpenstack = osc_snowpenstack.plugin

openstack.osc_snowpenstack.v1 =
    flight_list = osc_snowpenstack.v1.flight:FlightList
    flight_set = osc_snowpenstack.v1.flight:FlightSet
    flight_show = osc_snowpenstack.v1.flight:FlightShow
